--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,6 +1,8 @@
 html,
 body {
     height: 100%;
+    background-color: #000000;
+    color: silver;
 }
 
 .wrap {
@@ -16,7 +18,7 @@ body {
 
 .footer {
     height: 60px;
-    background-color: #f5f5f5;
+    background-color: #000000;
     border-top: 1px solid #ddd;
     padding-top: 20px;
 }
@@ -113,3 +115,4 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
